--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,38 @@
-Click==7.0
-configparser==3.5.0
-dlib==19.19.0
-Flask==1.1.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
+altgraph==0.17
+auto-py-to-exe==2.9.0
+backports.entry-points-selectable==1.1.0
+bottle==0.12.19
+bottle-websocket==0.2.9
+cffi==1.14.6
+click==7.1.1
+distlib==0.3.2
+Eel==0.12.4
+Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
-gunicorn==19.10.0
-Jinja2==2.10.3
-numpy==1.14.5
-MarkupSafe==1.0
-requests==2.20.0
-SQLAlchemy==1.3.12
-Werkzeug==0.16.0
+future==0.18.2
+gevent==21.1.2
+gevent-websocket==0.10.1
+greenlet==1.1.0
+gunicorn==20.1.0
+imutils==0.5.3
+itsdangerous==1.1.0
+Jinja2==2.11.1
+joblib==1.0.1
+MarkupSafe==1.1.1
+nltk==3.6.2
+pefile==2021.5.24
+platformdirs==2.0.2
+pycparser==2.20
+pyinstaller==4.4
+pyinstaller-hooks-contrib==2021.2
+pywin32-ctypes==0.2.0
+regex==2021.7.6
+six==1.16.0
+SQLAlchemy==1.3.15
+textblob==0.15.3
+tqdm==4.61.2
+virtualenv==20.6.0
+Werkzeug==1.0.1
+whichcraft==0.6.1
+zope.event==4.5.0
+zope.interface==5.4.0\
