--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ bottle==0.12.19
 bottle-websocket==0.2.9
 cffi==1.14.6
 click==7.1.1
+
 distlib==0.3.2
 Eel==0.12.4
+filelock==3.0.12
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.1
 future==0.18.2
@@ -35,4 +37,4 @@ virtualenv==20.6.0
 Werkzeug==1.0.1
 whichcraft==0.6.1
 zope.event==4.5.0
-zope.interface==5.4.0\
+zope.interface==5.4.0
